css/feedback.css
.slide-out-div {
  display: none;
  padding: 20px;
  padding-bottom: 0;
  width: 250px;
  background: white; 
  border:2px solid #D1CFCF;
  text-align: left;
  z-index: 3000;
} 
.slide-out-div .last {
  margin-bottom: 0;
  padding-bottom: 0;
} 

.ui-toaster .ui-toaster-body div{
  background: white;
}
.ui-toaster .ui-toaster-body div p{
  margin: 0;
  padding: 0;
}

